CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_reason_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_reason_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_reason_hist</externalName>
    <fields>
        <fullName>cde_reason_reason__c</fullName>
        <description>cde_reason_reason</description>
        <externalDeveloperName>cde_reason_reason</externalDeveloperName>
        <label>Reason code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>sfsit$t_adjmt_reason_hist</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_reason_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_adjmt_reason_hist__c</fullName>
        <description>idn_adjmt_reason_hist</description>
        <externalDeveloperName>idn_adjmt_reason_hist</externalDeveloperName>
        <label>Adjustment Reason hist id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_reason_adjmt__c</fullName>
        <description>idn_reason_adjmt</description>
        <externalDeveloperName>idn_reason_adjmt</externalDeveloperName>
        <label>Adjustment Reason iD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_reason_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>sfsit$t_adjmt_reason_hist</label>
    <pluralLabel>sfsit$t_adjmt_reason_hist</pluralLabel>
</CustomObject>